--- a/SIMS.WebApp/Views/Shared/_Layout.cshtml
+++ b/SIMS.WebApp/Views/Shared/_Layout.cshtml
@@ -108,6 +108,15 @@
 
     <script src="~/js/sb-admin-2.min.js"></script>
 
+    <script src="~/vendor/jquery/jquery.min.js"></script>
+    <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script src="~/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.8/jquery.inputmask.min.js"></script> @* <-- KIỂM TRA DÒNG NÀY *@
+
+    <script src="~/js/sb-admin-2.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
